--- a/table.html
+++ b/table.html
@@ -1,6 +1,24 @@
 <html>
     <head>
         <title>My webpage!</title>
+        <style>
+            table {
+                border: 2px solid black;
+                border-collapse: collapse;
+                width: 50%;
+            }
+
+            th,td {
+                border: 1px solid black;
+                padding: 5px;
+                text-align: center;
+            }
+
+            th{
+                background-color: lightgray;
+            }
+
+        </style>
     </head>
     <body>
         <table>
@@ -13,6 +31,16 @@
                 <td>500</td>
                 <td>16</td>
                 <td>Le Loi</td>
+            </tr>
+            <tr>
+                <td>700</td>
+                <td>18</td>
+                <td>Quang Trung</td>
+            </tr>
+            <tr>
+                <td>800</td>
+                <td>19</td>
+                <td>Thai Binh</td>
             </tr>
         </table>
     </body>
