--- a/lists.html
+++ b/lists.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>My Webpage!</title>
+        <link href="lists.scss" rel="stylesheet">
     </head>
     <body>
         An unorderd List:
