new change in css

--- a/lists.html
+++ b/lists.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>My Webpage!</title>
-        <link href="lists.scss" rel="stylesheet">
+        <link href="lists.css" rel="stylesheet">
     </head>
     <body>
         An unorderd List:
